# polyanalyst6api-py

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  api.insomnia.json  api_insomnia.yaml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.changes/: #2.removal  #7.feature  1.bugfix  1.doc  1.feature  1.removal  10.feature  11.bugfix  12.feature  14.bugfix  2.bugfix  2.feature  21517.feature  3.removal  4.doc  4.feature  5.feature  6.removal  7.bugfix  8.bugfix  9.bugfix  T22774.feature  T23048.feature  T28739.feature  T28740.feature  T41932.feature  add_class_report.feature  add_get_list_of_projects.feature  add_get_status.feature  add_method_to_get_reports.feature  add_project_load_methods.feature  apiversion.removal  certfile.removal  checks.feature  cred file.removal  doc.doc  drive.bugfix  exec_stats.bugfix  execute_to.feature  export.feature  (+12 more)
.github/workflows/: ci.yml  publish.yml  release-package.yml  release.yml
CHANGES/: .gitignore  4.doc  5.doc  6.doc
_modules/: index.html
_modules/polyanalyst6api/: api.html  drive.html  exceptions.html  project.html
_sources/: index.rst.txt
_static/: alabaster.css  basic.css  documentation_options.js
docs/: .readthedocs.yaml  api_insomnia.yaml  conf.py  index.rst  requirements.txt
examples/: execute_and_save_project.py  execute_node_and_save_result.py  live_coding.py  retrieve_nodes_list.py  set_parameters_and_execute.py  show_execution_statistics.py  upload_recursively.py
polyanalyst6api/: __init__.py  api.py  drive.py  exceptions.py  main.py  polyanalyst.py  project.py  report.py
tests/: test_polyanalyst6api.py  test_project_formats.py
tests/cassettes/test_project_formats/: test_get_execution_statistics.yaml  test_get_nodes.yaml  test_get_tasks.yaml  test_preview.yaml
