[tool.poetry]
name = "polyanalyst6api"
version = "0.26.2"  # don't change. the version is set by git tag
description = "polyanalyst6api is a PolyAnalyst API client for Python."
authors = ["yatmanov <yatmanov@megaputer.ru>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/Megaputer/polyanalyst6api-py"
documentation = "https://polyanalyst6api-py.rtfd.io/"

keywords = ["megaputer", "polyanalyst", "polyanalyst6api", "api"]

classifiers = [
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
"Changelog" = "https://github.com/Megaputer/polyanalyst6api-py/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.27"
pytus = "^0.2.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.group.test.dependencies]
pytest = "^3.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3"
sphinx-autodoc-typehints = "1.12.0"
towncrier = "^21.9"

[tool.towncrier]
package = "polyanalyst6api"
package_dir = "polyanalyst6api"
filename = "CHANGELOG.md"
directory = ".changes"
title_format = "{version} ({project_date})"
