[tool.poetry]
name = "polyanalyst6api"
version = "0.35.3"
description = "polyanalyst6api is a PolyAnalyst API client for Python."
authors = ["yatmanov <yatmanov@megaputer.ru>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/Megaputer/polyanalyst6api-py"
documentation = "https://polyanalyst6api-py.rtfd.io/"

keywords = ["megaputer", "polyanalyst", "polyanalyst6api", "api"]

classifiers = [
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
"Changelog" = "https://github.com/Megaputer/polyanalyst6api-py/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31"
pytus = "^0.2.1"
urllib3 = [
    {version = "1.26.18", python = "3.7"},
    {version = "*", python = ">=3.8"}
]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.poetry.group.docs.dependencies]
sphinx = {version = "^7.0.1", python = "3.11"}
sphinx-autodoc-typehints = {version = "^1.23.3", python = "3.11"}
