[build-system]
requires = ["setuptools >= 82.0.1", "setuptools-scm[simple]>=9.2"]
build-backend = "setuptools.build_meta"

[project]
name = "polyanalyst6api"
dependencies = [
    "requests >= 2.32.2, < 3.0.0",
    "pytus == 0.2.1"
]
requires-python = ">= 3.9"
authors = [
    {name = "yatmanov", email = "yatmanov@megaputer.ru"}
]
description = "polyanalyst6api is a PolyAnalyst API client for Python"
readme = "README.md"
license = "MIT"
keywords = ["megaputer", "polyanalyst", "polyanalyst6api", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest >= 7.4.0"]
docs = [
    "sphinx >= 7.0.1; python_version >= '3.11'",
    "sphinx-autodoc-typehints >= 1.23.3; python_version >= '3.11'"
]

[project.urls]
Documentation = "https://polyanalyst6api-py.rtfd.io/"
Source = "https://github.com/Megaputer/polyanalyst6api-py"
Changelog = "https://github.com/Megaputer/polyanalyst6api-py/blob/master/CHANGELOG.md"

[tool.ruff]
line-length = 119
target-version = "py39"

[tool.ruff.format]
quote-style = "single"
